# rsmi-wrapper

./: Cargo.toml  README.md
rsmi-wrapper/: Cargo.toml
rsmi-wrapper-sys/: Cargo.toml  README.md
rsmi-wrapper-sys/src/: bindings.rs  lib.rs
rsmi-wrapper/src/: error.rs  flags.rs  lib.rs
